Migrate Collectors.toList() -> toList()